--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -216,7 +216,7 @@
     <Compile Include="Areas\Admin\Controllers\CreativeStatsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\OffersController.cs" />
-    <Compile Include="Areas\Admin\Controllers\TDController.cs" />
+    <Compile Include="Areas\Admin\Controllers\TDAdminController.cs" />
     <Compile Include="Areas\Admin\Helpers.cs" />
     <Compile Include="Areas\Admin\Models\AdminModel.cs" />
     <Compile Include="Areas\Admin\Models\CampaignDropVM.cs" />
@@ -707,9 +707,10 @@
     <Content Include="Areas\TD\Views\Reports\Summary.cshtml" />
     <Content Include="Areas\TD\Views\Reports\ChartSetup.cshtml" />
     <Content Include="Areas\TD\Views\Reports\Creative.cshtml" />
-    <Content Include="Areas\Admin\Views\TD\InsertionOrders.cshtml" />
-    <Content Include="Areas\Admin\Views\TD\CreateUserProfile.cshtml" />
-    <Content Include="Areas\Admin\Views\TD\TradingDeskAccounts.cshtml" />
+    <Content Include="Areas\Admin\Views\TDAdmin\InsertionOrders.cshtml" />
+    <Content Include="Areas\Admin\Views\TDAdmin\CreateUserProfile.cshtml" />
+    <Content Include="Areas\Admin\Views\TDAdmin\TradingDeskAccounts.cshtml" />
+    <Content Include="Areas\Admin\Views\TDAdmin\EditAccount.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
