--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -254,7 +254,7 @@
     <Compile Include="DTOs\DailyInfo.cs" />
     <Compile Include="DTOs\OfferInfo.cs" />
     <Compile Include="DTOs\SearchStat.cs" />
-    <Compile Include="DTOs\TD\CreativeSummary.cs" />
+    <Compile Include="DTOs\TD\CreativeStatsSummary.cs" />
     <Compile Include="DTOs\TD\StatsSummary.cs" />
     <Compile Include="DTOs\WeeklySearchStat.cs" />
     <Compile Include="Entities\Advertiser.cs" />
