--- a/1/EomTool/EomToolWeb/EomToolWeb.csproj
+++ b/1/EomTool/EomToolWeb/EomToolWeb.csproj
@@ -180,7 +180,7 @@
     <Compile Include="Infrastructure\EomToolWebConfigSection.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.cs" />
     <Compile Include="Infrastructure\NinjectControllerFactory.partial.cs" />
-    <Compile Include="Models\AffiliateCampaignAmountsModel.cs" />
+    <Compile Include="Models\AffiliateAmountsModel.cs" />
     <Compile Include="Models\AffiliatesListViewModel.cs" />
     <Compile Include="Models\BlogPost.cs" />
     <Compile Include="Models\CampaignAffiliateAmountsModel.cs" />
@@ -3384,6 +3384,7 @@
     <Content Include="Views\Admin\AffiliateMaintenance.cshtml" />
     <Content Include="Views\Workflow\AffiliateCampaignAmounts.cshtml" />
     <Content Include="Views\Workflow\UnitTypeDropDown.cshtml" />
+    <Content Include="Views\Workflow\AffiliateAmounts.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
