--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -308,6 +308,10 @@
     <Compile Include="Migrations\201408121512151_Mig_AdDailySummary.Designer.cs">
       <DependentUpon>201408121512151_Mig_AdDailySummary.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201408141549089_Mig_ManagementFeePct.cs" />
+    <Compile Include="Migrations\201408141549089_Mig_ManagementFeePct.Designer.cs">
+      <DependentUpon>201408141549089_Mig_ManagementFeePct.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ClientPortalRepository.cs" />
@@ -377,6 +381,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201408121512151_Mig_AdDailySummary.resx">
       <DependentUpon>201408121512151_Mig_AdDailySummary.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201408141549089_Mig_ManagementFeePct.resx">
+      <DependentUpon>201408141549089_Mig_ManagementFeePct.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup />
