--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -713,6 +713,7 @@
     <Content Include="Areas\Admin\Views\TDAdmin\EditAccount.cshtml" />
     <Content Include="Areas\Admin\Views\TDAdmin\Upload.cshtml" />
     <Content Include="Areas\TD\Views\Shared\_TDDateFuncs.cshtml" />
+    <Content Include="Areas\Admin\Views\TDAdmin\StatsRollup.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
