--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -9,9 +9,12 @@
   <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" />
   <package id="Google.Ads.Common" version="1.8.0" targetFramework="net45" />
   <package id="Google.AdWords" version="16.1.0" targetFramework="net45" />
-  <package id="Google.Apis" version="1.5.0-beta" targetFramework="net45" />
+  <package id="Google.Apis" version="1.8.2" targetFramework="net45" />
   <package id="Google.Apis.Analytics.v3" version="1.5.0.71-beta" targetFramework="net45" />
+  <package id="Google.Apis.Auth" version="1.8.2" targetFramework="net45" />
   <package id="Google.Apis.Authentication" version="1.5.0-beta" targetFramework="net45" />
+  <package id="Google.Apis.Core" version="1.8.2" targetFramework="net45" />
+  <package id="Google.Apis.Storage.v1" version="1.8.1.70" targetFramework="net45" />
   <package id="log4net" version="2.0.2" targetFramework="net45" />
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.0.19" targetFramework="net45" />
