--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -7,10 +7,10 @@
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" />
-  <package id="Google.Ads.Common" version="1.8.0" targetFramework="net45" />
-  <package id="Google.AdWords" version="16.1.0" targetFramework="net45" />
+  <package id="Google.Ads.Common" version="3.2.0" targetFramework="net45" />
+  <package id="Google.AdWords" version="18.3.0" targetFramework="net45" />
   <package id="Google.Apis" version="1.8.2" targetFramework="net45" />
-  <package id="Google.Apis.Analytics.v3" version="1.5.0.71-beta" targetFramework="net45" />
+  <package id="Google.Apis.Analytics.v3" version="1.8.1.990" targetFramework="net45" />
   <package id="Google.Apis.Auth" version="1.8.2" targetFramework="net45" />
   <package id="Google.Apis.Authentication" version="1.5.0-beta" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.8.2" targetFramework="net45" />
