--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -59,7 +59,7 @@
     <add key="GmailReporting_Password" value="1423qrwe" />
 
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
-    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com"/>
+    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
 
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
@@ -136,6 +136,10 @@
       <dependentAssembly>
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.12.0" newVersion="1.2.12.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Ads.Common" publicKeyToken="52807268f2b614dc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
@@ -220,7 +224,7 @@
          set this key at runtime. See OAuth folder under Examples folder for a
          web and a console application example.
     -->
-    <add key='OAuth2RefreshToken' value='1/Xw4TBUGFdNlqa547PbwWQNWJPGUkzr3jwrcZAfPJOwE' />
+    <add key="OAuth2RefreshToken" value="1/Xw4TBUGFdNlqa547PbwWQNWJPGUkzr3jwrcZAfPJOwE" />
 
     <!-- Optional: Specify an OAuth2 redirect url if you are building a
          web application and implementing OAuth2 web flow in your application.
