--- a/3/LineCommander/App.config
+++ b/3/LineCommander/App.config
@@ -5,8 +5,8 @@
     <sectionGroup name="userSettings" type="System.Configuration.UserSettingsGroup, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089">
       <section name="LineCommander.Properties.Settings" type="System.Configuration.ClientSettingsSection, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" allowExeDefinition="MachineToLocalUser" requirePermission="false" />
     </sectionGroup>
-    <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" />
-  </configSections>
+    
+  <section name="AdWordsApi" type="System.Configuration.DictionarySectionHandler" /></configSections>
   <connectionStrings>
     <add name="ClientPortalContext" connectionString="metadata=res://*/Contexts.ClientPortal.csdl|res://*/Contexts.ClientPortal.ssdl|res://*/Contexts.ClientPortal.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortal;user id=sa;password=sp0ngbOb;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
     <add name="ClientPortalDWContext" connectionString="metadata=res://*/Contexts.ClientPortalDW.csdl|res://*/Contexts.ClientPortalDW.ssdl|res://*/Contexts.ClientPortalDW.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=biz\sqlexpress;initial catalog=ClientPortalDW;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;" providerName="System.Data.EntityClient" />
@@ -19,13 +19,13 @@
   </connectionStrings>
   <loggingConfiguration name="" tracingEnabled="true" defaultCategory="General">
     <listeners>
-      <add name="Event Log Listener"           formatter="Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="Enterprise Library Logging" log="Application" machineName="." traceOutputOptions="None" />
-      <add name="Rolling Flat File Listener"   formatter="Basic Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" rollInterval="Day" rollSizeKB="20000" maxArchivedFiles="10" header="" footer="" />
+      <add name="Event Log Listener" formatter="Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.FormattedEventLogTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.FormattedEventLogTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" source="Enterprise Library Logging" log="Application" machineName="." traceOutputOptions="None" />
+      <add name="Rolling Flat File Listener" formatter="Basic Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.TraceListeners.RollingFlatFileTraceListener, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.RollingFlatFileTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" rollInterval="Day" rollSizeKB="20000" maxArchivedFiles="10" header="" footer="" />
       <add name="Console Diagnostics Listener" formatter="Basic Text Formatter" type="System.Diagnostics.ConsoleTraceListener, System, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.SystemDiagnosticsTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
-      <add name="Custom Console Listener"      formatter="Basic Text Formatter" type="CakeExtracter.Logging.EnterpriseLibrary.ConsoleCustomTraceListener, CakeExtracter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
+      <add name="Custom Console Listener" formatter="Basic Text Formatter" type="CakeExtracter.Logging.EnterpriseLibrary.ConsoleCustomTraceListener, CakeExtracter" listenerDataType="Microsoft.Practices.EnterpriseLibrary.Logging.Configuration.CustomTraceListenerData, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" />
     </listeners>
     <formatters>
-      <add name="Text Formatter"       type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="Timestamp: {timestamp}{newline}&#xA;Message: {message}{newline}&#xA;Category: {category}{newline}&#xA;Priority: {priority}{newline}&#xA;EventId: {eventid}{newline}&#xA;Severity: {severity}{newline}&#xA;Title:{title}{newline}&#xA;Machine: {localMachine}{newline}&#xA;App Domain: {localAppDomain}{newline}&#xA;ProcessId: {localProcessId}{newline}&#xA;Process Name: {localProcessName}{newline}&#xA;Thread Name: {threadName}{newline}&#xA;Win32 ThreadId:{win32ThreadId}{newline}&#xA;Extended Properties: {dictionary({key} - {value}{newline})}" />
+      <add name="Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="Timestamp: {timestamp}{newline}&#xA;Message: {message}{newline}&#xA;Category: {category}{newline}&#xA;Priority: {priority}{newline}&#xA;EventId: {eventid}{newline}&#xA;Severity: {severity}{newline}&#xA;Title:{title}{newline}&#xA;Machine: {localMachine}{newline}&#xA;App Domain: {localAppDomain}{newline}&#xA;ProcessId: {localProcessId}{newline}&#xA;Process Name: {localProcessName}{newline}&#xA;Thread Name: {threadName}{newline}&#xA;Win32 ThreadId:{win32ThreadId}{newline}&#xA;Extended Properties: {dictionary({key} - {value}{newline})}" />
       <add name="Basic Text Formatter" type="Microsoft.Practices.EnterpriseLibrary.Logging.Formatters.TextFormatter, Microsoft.Practices.EnterpriseLibrary.Logging, Version=6.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35" template="[{timestamp} ({win32ThreadId})]: {message}" />
     </formatters>
     <categorySources>
@@ -112,6 +112,10 @@
         <assemblyIdentity name="log4net" publicKeyToken="669e0ddf0bb1aa2a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.2.12.0" newVersion="1.2.12.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Google.Ads.Common" publicKeyToken="52807268f2b614dc" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <userSettings>
@@ -128,72 +132,46 @@
       Web.config for quickly configuring and running a simple application.
       However, it is not mandatory to provide your settings in the config file,
       you may also set or override these settings at runtime. See
-      https://code.google.com/p/google-api-adwords-dotnet/wiki/HowToUseAdWordsUser
+      https://github.com/googleads/googleads-dotnet-lib/wiki/Getting-Started
       for details.
 
       You can refer to
-      https://code.google.com/p/google-api-adwords-dotnet/wiki/UnderstandingAppConfig
+      https://github.com/googleads/googleads-dotnet-lib/wiki/Understanding-App.config
       for detailed explanation of each configuration key.
-    -->
-
-    <!-- Settings related to SOAP logging. -->
-    <add key="LogPath" value="C:\Logs\" />
-    <add key="LogToFile" value="false" />
-    <add key="MaskCredentials" value="true" />
-    <add key="LogErrorsOnly" value="true" />
-
-    <!-- Settings related to general library behaviour. -->
-
-    <!-- Use this key to automatically retry a call that failed due to a
-         recoverable error like expired credentials. -->
-    <!-- <add key="RetryCount" value="1"/> -->
-
-    <!-- Set the service timeout in milliseconds. -->
-    <!-- <add key="Timeout" value="100000"/> -->
-
-    <!-- Use this key to enable or disable gzip compression in SOAP requests.-->
-    <add key="EnableGzipCompression" value="true" />
-
-    <!-- Proxy settings for library. -->
-    <add key="ProxyServer" value="" />
-    <add key="ProxyUser" value="" />
-    <add key="ProxyPassword" value="" />
-    <add key="ProxyDomain" value="" />
-
-    <!-- Settings specific to AdWords API.-->
-    <add key="UserAgent" value="direct-agents-client-portal" />
-    <add key="DeveloperToken" value="kEw3EPUPKDwKFpjRRIpm5Q" />
-
-    <!-- If your application is a simple script that makes calls to only a
+    --><!-- Settings related to SOAP logging. --><!-- Proxy settings for library. --><!-- Settings specific to AdWords API.--><!-- If your application is a simple script that makes calls to only a
          single Adwords account, then you can set your customer ID here. If you
          have multiple customer IDs to deal with in your account, then you can
          comment out this key and set the value at runtime by setting
          ((AdWordsAppConfig) user.Config).ClientCustomerId = "xxx";
-    -->
+    --><!-- The following OAuth2 settings are optional. --><!-- Provide a different OAuth2 scope if required. Multiple scopes should be
+         separated by spaces. --><!-- <add key="OAuth2Scope" value="INSERT_OAUTH2_SCOPE_HERE" /> --><!-- Use the following keys if you want to use Web / Installed application
+         OAuth flow.--><add key="UserAgent" value="direct-agents-client-portal" />
+    <add key="DeveloperToken" value="kEw3EPUPKDwKFpjRRIpm5Q" />
+
+    
     <!--<add key="ClientCustomerId" value="707-036-4439"/>-->
 
+    
+    
+    
     <!-- Settings specific to use OAuth2 as authentication mechanism. You could
          run Common\Util\OAuth2TokenGenerator.cs to generate this section of the
          config file.
-    -->
-    <add key="AuthorizationMethod" value="OAuth2" />
-    <!-- Provide the OAuth2 client ID and secret. You can create one from
-         https://code.google.com/apis/console/. See
-         https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
+    --><!-- Provide the OAuth2 client ID and secret. You can create one from
+         https://console.developers.google.com. See
+         https://github.com/googleads/googleads-dotnet-lib/wiki/Using-OAuth2
          for more details.
-    -->
-    <add key="OAuth2ClientId" value="596863405612.apps.googleusercontent.com" />
+    --><add key="OAuth2ClientId" value="596863405612.apps.googleusercontent.com" />
     <add key="OAuth2ClientSecret" value="8qonZCA_oSenYehXTQ9Hcgxk" />
 
-    <!-- The following OAuth2 settings are optional. -->
-    <!-- Provide a different OAuth2 scope if required. Multiple scopes should be
-         separated by spaces. -->
-    <!-- <add key="OAuth2Scope" value="INSERT_OAUTH2_SCOPE_HERE" /> -->
+    
+    
+    
 
-    <!-- Use the following keys if you want to use Web / Installed application
-         OAuth flow.-->
+    
 
-    <add key="OAuth2Mode" value="APPLICATION" />
+    
+    
     <!-- If you are using a single MCC account's credentials to make calls to
          all your accounts, then you can run OAuth2TokenGenerator.cs to generate
          a RefreshToken for that account and set this key in your application's
@@ -201,22 +179,33 @@
          accounts, then you need to implement OAuth2 flow in your account and
          set this key at runtime. See OAuth folder under Examples folder for a
          web and a console application example.
-    -->
-    <add key="OAuth2RefreshToken" value="1/Frp86av8j0EBR276x606m0EitEeEwFzob377Whl0K0E" />
+    --><add key="OAuth2RefreshToken" value="1/Frp86av8j0EBR276x606m0EitEeEwFzob377Whl0K0E" />
 
-    <!-- Optional: Specify an OAuth2 redirect url if you are building a
+    
+    
+
+    
+    
+
+    
+    
+    <!--
+    <add key="AuthorizationMethod" value="ClientLogin" />   
+    <add key="Email" value="aaron@directagents.com"/>
+    <add key="Password" value="Welcome2010"/>
+    -->
+    
+    
+  <!-- Settings related to general library behaviour. --><!-- Use this key to automatically retry a call that failed due to a
+         recoverable error like expired credentials. --><!-- <add key="RetryCount" value="1"/> --><!-- Set the service timeout in milliseconds. --><!-- <add key="Timeout" value="100000"/> --><!-- Use this key to enable or disable gzip compression in SOAP requests.--><add key="MaskCredentials" value="true" /><add key="EnableGzipCompression" value="true" /><add key="ProxyServer" value="" /><add key="ProxyUser" value="" /><add key="ProxyPassword" value="" /><add key="ProxyDomain" value="" /><add key="UserAgent" value="INSERT_YOUR_COMPANY_OR_APPLICATION_NAME_HERE" /><add key="DeveloperToken" value="INSERT_YOUR_DEVELOPER_TOKEN_HERE" /><add key="ClientCustomerId" value="INSERT_YOUR_CLIENT_CUSTOMER_ID_HERE" /><add key="OAuth2ClientId" value="INSERT_OAUTH2_CLIENT_ID_HERE" /><add key="OAuth2ClientSecret" value="INSERT_OAUTH2_CLIENT_SECRET_HERE" /><add key="OAuth2Mode" value="APPLICATION" /><add key="OAuth2RefreshToken" value="INSERT_OAUTH2_REFRESH_TOKEN_HERE" /><!-- Optional: Specify an OAuth2 redirect url if you are building a
          web application and implementing OAuth2 web flow in your application.
-    -->
-    <!-- <add key="OAuth2RedirectUri" value="" /> -->
-
-    <!-- Use the following keys if you want to use OAuth2 service account flow.
+    --><!-- <add key="OAuth2RedirectUri" value="" /> --><!-- Use the following keys if you want to use OAuth2 service account flow.
          You should comment out all the keys for Web / Installed application
          OAuth flow above. See
          https://developers.google.com/adwords/api/docs/guides/service-accounts
-         and https://code.google.com/p/google-api-adwords-dotnet/wiki/UsingOAuth
+         https://github.com/googleads/googleads-dotnet-lib/wiki/Using-OAuth2
          for more details.
-    -->
-    <!--
+    --><!--
     <add key="OAuth2Mode" value="SERVICE_ACCOUNT" />
     <add key="OAuth2ServiceAccountEmail"
         value="INSERT_OAUTH2_SERVICE_ACCOUNT_EMAIL_HERE" />
@@ -225,40 +214,41 @@
         value="INSERT_OAUTH2_JWT_CERTIFICATE_PATH_HERE" />
     <add key="OAuth2JwtCertificatePassword"
         value="INSERT_OAUTH2_JWT_CERTIFICATE_PASSWORD_HERE" />
-    -->
-
-    <!-- Settings specific to use ClientLogin as authentication mechanism. -->
-    <!-- To use ClientLogin as authentication mechanism, uncomment the following
-         section and comment the OAuth2 section above. Keep in mind that
-         ClientLogin API is deprecated, and its use is strongly discouraged.
-         See https://developers.google.com/accounts/docs/AuthForInstalledApps
-         for details.-->
-    <!--
-    <add key="AuthorizationMethod" value="ClientLogin" />   
-    <add key="Email" value="aaron@directagents.com"/>
-    <add key="Password" value="Welcome2010"/>
-    -->
-    <!-- Optional: uncomment this if you want to reuse an authToken multiple
-         times. -->
-    <!-- <add key="AuthToken" value="INSERT_YOUR_AUTH_TOKEN_HERE"/> -->
-  </AdWordsApi>
-  <system.web>
+    --></AdWordsApi>
+  
+  
+  
+<system.web>
     <webServices>
       <soapExtensionTypes>
         <add type="Google.Api.Ads.Common.Lib.SoapListenerExtension, Google.Ads.Common" priority="1" group="0" />
       </soapExtensionTypes>
     </webServices>
-  </system.web>
-  <system.net>
+  </system.web><system.net>
     <settings>
       <httpWebRequest maximumErrorResponseLength="-1" />
     </settings>
-  </system.net>
-  <system.diagnostics>
+  </system.net><system.diagnostics>
     <sources>
       <source name="AdsClientLibs.DeprecationMessages" switchName="AdsClientLibs.DeprecationMessages" switchType="System.Diagnostics.SourceSwitch">
         <listeners>
           <add name="myListener" type="System.Diagnostics.EventLogTraceListener" initializeData="Application" />
+        </listeners>
+      </source>
+      <source name="AdsClientLibs.SoapXmlLogs" switchName="AdsClientLibs.SoapXmlLogs" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <!-- Modify the initializeData attribute below to control the
+                path to the SOAP XML log file. -->
+          <add name="soapXmlLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\soap_xml.log" />
+          <remove name="Default" />
+        </listeners>
+      </source>
+      <source name="AdsClientLibs.RequestInfoLogs" switchName="AdsClientLibs.RequestInfoLogs" switchType="System.Diagnostics.SourceSwitch">
+        <listeners>
+          <!-- Modify the initializeData attribute below to control the
+                path to the request info log file. -->
+          <add name="requestInfoLogListener" type="System.Diagnostics.TextWriterTraceListener" initializeData="C:\Logs\request_info.log" />
+          <remove name="Default" />
         </listeners>
       </source>
     </sources>
@@ -269,6 +259,14 @@
           http://msdn.microsoft.com/en-us/library/system.diagnostics.sourcelevels.aspx
           for all possible values this key can take. -->
       <add name="AdsClientLibs.DeprecationMessages" value="Warning" />
+      <!-- Use this trace switch to control the SOAP XML logs written by Ads*
+          .NET libraries. The default level is set to Off. Logs are generated at
+          both the Error and Information levels. -->
+      <add name="AdsClientLibs.SoapXmlLogs" value="Off" />
+      <!-- Use this trace switch to control the Request Info logs written by
+          Ads* .NET libraries. The default level is set to Off. Logs are
+          generated at both the Error and Information levels. -->
+      <add name="AdsClientLibs.RequestInfoLogs" value="Off" />
     </switches>
-  </system.diagnostics>
-</configuration>
+    <trace autoflush="true" />
+  </system.diagnostics></configuration>
