--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -236,6 +236,9 @@
     <Compile Include="Contexts\SearchDailySummary2.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
     </Compile>
+    <Compile Include="Contexts\SearchProfile.cs">
+      <DependentUpon>ClientPortal.tt</DependentUpon>
+    </Compile>
     <Compile Include="Contexts\TDContext.cs" />
     <Compile Include="Contexts\UserEvent.cs">
       <DependentUpon>ClientPortal.tt</DependentUpon>
