--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -216,6 +216,7 @@
     <Compile Include="Areas\Admin\Controllers\CreativeStatsController.cs" />
     <Compile Include="Areas\Admin\Controllers\HomeController.cs" />
     <Compile Include="Areas\Admin\Controllers\OffersController.cs" />
+    <Compile Include="Areas\Admin\Controllers\SearchAdminController.cs" />
     <Compile Include="Areas\Admin\Controllers\TDAdminController.cs" />
     <Compile Include="Areas\Admin\Helpers.cs" />
     <Compile Include="Areas\Admin\Models\AdminModel.cs" />
@@ -714,6 +715,8 @@
     <Content Include="Areas\Admin\Views\TDAdmin\Upload.cshtml" />
     <Content Include="Areas\TD\Views\Shared\_TDDateFuncs.cshtml" />
     <Content Include="Areas\Admin\Views\TDAdmin\StatsRollup.cshtml" />
+    <Content Include="Areas\Admin\Views\SearchAdmin\SearchProfiles.cshtml" />
+    <Content Include="Areas\Admin\Views\SearchAdmin\CreateUserProfile.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
