Search_UseYesterdayAsLatest, etc

--- a/3/ClientPortal.Web/ClientPortal.Web/Web.config
+++ b/3/ClientPortal.Web/ClientPortal.Web/Web.config
@@ -22,6 +22,7 @@
     <add key="EmailFromDefault" value="reporting@directagents.com" />
     <add key="PortalUrl" value="http://localhost:60195" />
     <add key="UseYesterdayAsLatest" value="false" />
+    <add key="Search_UseYesterdayAsLatest" value="true" />
   </appSettings>
   <system.web>
     <compilation debug="true" targetFramework="4.5">
