--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -14,6 +14,7 @@
   <package id="Google.Apis.Auth" version="1.8.2" targetFramework="net45" />
   <package id="Google.Apis.Authentication" version="1.5.0-beta" targetFramework="net45" />
   <package id="Google.Apis.Core" version="1.8.2" targetFramework="net45" />
+  <package id="Google.Apis.DoubleClickBidManager.v1" version="1.8.1.230" targetFramework="net45" />
   <package id="Google.Apis.Storage.v1" version="1.8.1.70" targetFramework="net45" />
   <package id="log4net" version="2.0.2" targetFramework="net45" />
   <package id="ManyConsole" version="0.4.2.16" targetFramework="net45" />
