--- a/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
+++ b/3/ClientPortal.Web/ClientPortal.Web/ClientPortal.Web.csproj
@@ -719,6 +719,7 @@
     <Content Include="Areas\Admin\Views\SearchAdmin\SearchProfiles.cshtml" />
     <Content Include="Areas\Admin\Views\SearchAdmin\CreateUserProfile.cshtml" />
     <Content Include="Areas\Admin\Views\SearchAdmin\EditSearchProfileContacts.cshtml" />
+    <Content Include="Areas\Admin\Views\SearchAdmin\EditProfile.cshtml" />
     <None Include="Properties\PublishProfiles\clientportal.directagents.local - Debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - debug.pubxml" />
     <None Include="Properties\PublishProfiles\gogrid - prod.pubxml" />
