--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -70,6 +70,11 @@
     <add key="BingReportFilename" value="bingrep.zip" />
     <add key="AdWordsReportFilePath" value="C:\Downloads\adwordsrep.xml" />
 
+    <add key="CriteoUsername" value="criteo_folica_api" />
+    <add key="CriteoPassword" value="Folica.Criteo.2013" />
+    <add key="CriteoSource" value="DirectAgents-ClientPortal-1" />
+    <add key="CriteoAppToken" value="2061376491693608448" />
+
     <add key="GoogleAPI_Certificate" value="271266501f61f25ee49c19a3c5cf3bb9a769ba00-privatekey.p12" />
     <add key="GoogleAPI_ServiceEmail" value="960492209499-cdktdkluj4sj5ee8bto7hdi7m058lfg9@developer.gserviceaccount.com" />
   </appSettings>
@@ -79,10 +84,14 @@
         <binding name="BasicHttpBinding_IReportingService" sendTimeout="00:03:00">
           <security mode="Transport" />
         </binding>
+        <binding name="CriteoAdvertiserAPISoap" maxReceivedMessageSize="100100">
+          <security mode="Transport" />
+        </binding>
       </basicHttpBinding>
     </bindings>
     <client>
       <endpoint address="https://adcenterapi.microsoft.com/Api/Advertiser/V8/Reporting/ReportingService.svc" binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IReportingService" contract="Reporting.IReportingService" name="BasicHttpBinding_IReportingService" />
+      <endpoint address="https://advertising.criteo.com/API/v201010/AdvertiserService.asmx" binding="basicHttpBinding" bindingConfiguration="CriteoAdvertiserAPISoap" contract="CriteoAPI.CriteoAdvertiserAPISoap" name="CriteoAdvertiserAPISoap" />
     </client>
   </system.serviceModel>
   <startup>
