update miniprofiler + remove extra files on publish

--- a/3/ClientPortal.Web/ClientPortal.Web.Tests/App.config
+++ b/3/ClientPortal.Web/ClientPortal.Web.Tests/App.config
@@ -40,6 +40,10 @@
         <assemblyIdentity name="Google.Ads.Common" publicKeyToken="52807268f2b614dc" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.2.0.0" newVersion="3.2.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="MiniProfiler" publicKeyToken="b44f9351044011a3" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-3.1.1.140" newVersion="3.1.1.140" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
