SendSimpleReportsCommand,SimpleReportManager & related changes

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -49,9 +49,8 @@
       </errors>
     </specialSources>
   </loggingConfiguration>
-
   <appSettings>
-    <add key="PortalEmail" value="portal@directagent.com" />
+    <!--<add key="PortalEmail" value="portal@directagent.com" />-->
 
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
     <add key="GmailEmailer_Password" value="Welcomenew1" />
