--- a/3/ClientPortal.Data/ClientPortal.Data.csproj
+++ b/3/ClientPortal.Data/ClientPortal.Data.csproj
@@ -267,6 +267,7 @@
     <Compile Include="Entities\Goal.cs" />
     <Compile Include="Entities\Offer.cs" />
     <Compile Include="Entities\SearchProfile.cs" />
+    <Compile Include="Entities\SimpleReport.cs" />
     <Compile Include="Entities\TD\AdRoll\AdDailySummary.cs" />
     <Compile Include="Entities\TD\AdRoll\AdRollAd.cs">
       <SubType>Code</SubType>
