--- a/3/LineCommander/App.config
+++ b/3/LineCommander/App.config
@@ -47,10 +47,16 @@
     </specialSources>
   </loggingConfiguration>
   <appSettings>
-    <add key="PortalEmail" value="portal@directagent.com" />
+    <!--<add key="PortalEmail" value="portal@directagent.com" />-->
 
     <add key="GmailEmailer_Username" value="portal@directagents.com" />
     <add key="GmailEmailer_Password" value="Welcomenew1" />
+    <add key="GmailReporting_Email" value="reporting@directagents.com" />
+    <add key="GmailReporting_Password" value="1423qrwe" />
+
+    <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
+    <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
+
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="BingApiToken" value="EW65911AO" />
