--- a/3/CakeExtracter/CakeExtracter/packages.config
+++ b/3/CakeExtracter/CakeExtracter/packages.config
@@ -7,6 +7,7 @@
   <package id="EnterpriseLibrary.Logging" version="6.0.1304.0" targetFramework="net45" />
   <package id="EntityFramework" version="5.0.0" targetFramework="net45" />
   <package id="EntityFramework.Extended" version="5.0.0.73" targetFramework="net45" />
+  <package id="EPPlus" version="3.1.3.3" targetFramework="net45" />
   <package id="Google.Ads.Common" version="3.2.0" targetFramework="net45" />
   <package id="Google.AdWords" version="18.3.0" targetFramework="net45" />
   <package id="Google.Apis" version="1.8.2" targetFramework="net45" />
