--- a/3/ClientPortal.Web/packages/repositories.config
+++ b/3/ClientPortal.Web/packages/repositories.config
@@ -11,4 +11,5 @@
   <repository path="..\..\QuickBooks\packages.config" />
   <repository path="..\ClientPortal.Web.Tests\packages.config" />
   <repository path="..\ClientPortal.Web\packages.config" />
+  <repository path="..\Spreadsheets\packages.config" />
 </repositories>
