begin reading in excel template for report

--- a/3/CakeExtracter.ConsoleApplication/App.config
+++ b/3/CakeExtracter.ConsoleApplication/App.config
@@ -60,6 +60,8 @@
     <add key="BudgetAlerts_TestEmail" value="kevin@directagents.com" />
     <add key="BudgetAlerts_Email" value="mediabuyers@directagents.com" />
 
+    <add key="ExcelTemplate_SearchPPC" value="SearchPPCtemplate.xlsx" />
+
     <add key="CakeApiKey" value="FCjdYAcwQE" />
     <add key="ClientSettingsProvider.ServiceUri" value="" />
     <add key="BingApiToken" value="EW65911AO" />
